<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.khoavna.loadingapplication.ui.MainActivity"/>
        <variable
            name="fileName"
            type="String" />

        <variable
            name="status"
            type="String" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#00aeac"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dp_20"
            app:layoutDescription="@xml/activity_detail_scene"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/tv_label_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_20"
                android:text="@{fileName}"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_label_download_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/download_status"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_download_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textColor="@{status == MainActivity.STATUS_FAIL ? @color/fail : @color/green}"
                android:text="@{status}"
                android:textSize="@dimen/sp_20" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                app:layout_constraintHeight_min="56dp"
                android:text="@string/done"
                android:textColor="@color/white" />
        </androidx.constraintlayout.motion.widget.MotionLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>